style.css
body {
    background-color: #EFE7DA;
}

div.tooltip {	
    position: absolute;				
    background: #1B264F;
    width: 150px;
    color: white;			
    pointer-events: none;
    opacity: 0;
    border-radius: 5px;	
}

.tick text{
    fill: #9CAEA9;
}

.parameter-value .handle {
    fill: #8FA6CB;
}

div#country {
    font-weight: bold;
}

